# SmartEth

./: .gitignore  .gitmodules  Makefile  README.md
firmware/: README.md
firmware/baremetal/: Makefile
firmware/baremetal/hello/: hello.asm  hello.c  link.ld  start.S
firmware/bsp/: bsp.h  clint.c  clint.h  plic.c  plic.h  uart.c  uart.h
firmware/host-driver/driver/: smarteth_main.c
firmware/lds/: smartnic.ld
firmware/qemu-dev/: build.sh  sc_protocol.h  smarteth_pci.c  smarteth_sc_bridge.c
firmware/rtos/: FreeRTOSConfig.h  Makefile  freertos_risc_v_chip_specific_extensions.h  libc_supp.c  main.c  pci_test.c  pci_test.h  smartnic_rtos.asm  startup.S
sim/qemu/: Makefile  run.sh
sim/systemc/: CMakeLists.txt  run_cosim.sh
sim/systemc/src/: dma_engine.cpp  dma_engine.h  main.cpp  net_if.cpp  net_if.h  nic.cpp  nic.h  pcie_bridge.cpp  pcie_bridge.h  pkt_proc.cpp  pkt_proc.h  protocol.h  reg_block.cpp  reg_block.h
tools/: debug.gdb  env-check.sh
